{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 222,
  "lineage": "6e877792-aa9a-d378-40e9-f51af9bb813a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ngwEIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca78dd8628b4dfc7",
            "domain": "vpc",
            "id": "eipalloc-0ca78dd8628b4dfc7",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-184-72-148-99.compute-1.amazonaws.com",
            "public_ip": "184.72.148.99",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "ngwEIP"
            },
            "tags_all": {
              "Name": "ngwEIP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:internet-gateway/igw-033603132eafb7d44",
            "id": "igw-033603132eafb7d44",
            "owner_id": "122190129446",
            "tags": {
              "Name": "test-Prod-IGW-01"
            },
            "tags_all": {
              "Name": "test-Prod-IGW-01"
            },
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ca78dd8628b4dfc7",
            "connectivity_type": "public",
            "id": "nat-0003addf619d3a9b0",
            "network_interface_id": "eni-0a813a6400bf8e4fc",
            "private_ip": "10.0.2.166",
            "public_ip": "184.72.148.99",
            "subnet_id": "subnet-0647f7b7e08287b0c",
            "tags": {
              "Name": "NGW"
            },
            "tags_all": {
              "Name": "NGW"
            }
          },
          "dependencies": [
            "aws_eip.ngwEIP",
            "aws_internet_gateway.igw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "prv_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:route-table/rtb-0e5e9752d09876761",
            "id": "rtb-0e5e9752d09876761",
            "owner_id": "122190129446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0003addf619d3a9b0",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route Table"
            },
            "tags_all": {
              "Name": "Private Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.ngwEIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:route-table/rtb-0119cf8c841f306be",
            "id": "rtb-0119cf8c841f306be",
            "owner_id": "122190129446",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-033603132eafb7d44",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public Route Table"
            },
            "tags_all": {
              "Name": "public Route Table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "prv_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e5d4e43730f9e08e",
            "route_table_id": "rtb-0e5e9752d09876761",
            "subnet_id": "subnet-01e56d0d3e5011dbb"
          },
          "dependencies": [
            "aws_eip.ngwEIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.prv_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09da3a214fbde554e",
            "route_table_id": "rtb-0e5e9752d09876761",
            "subnet_id": "subnet-0b43d709041937d86"
          },
          "dependencies": [
            "aws_eip.ngwEIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.prv_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-008d1765da877401c",
            "route_table_id": "rtb-0e5e9752d09876761",
            "subnet_id": "subnet-042576f829250640a"
          },
          "dependencies": [
            "aws_eip.ngwEIP",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.ngw",
            "aws_route_table.prv_rt",
            "aws_subnet.private_subnets",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_rt_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0185d50afc343db0b",
            "route_table_id": "rtb-0119cf8c841f306be",
            "subnet_id": "subnet-029289ee98e51c914"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d7f4f8a779183f0",
            "route_table_id": "rtb-0119cf8c841f306be",
            "subnet_id": "subnet-0647f7b7e08287b0c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08a7fcc4c5653a32c",
            "route_table_id": "rtb-0119cf8c841f306be",
            "subnet_id": "subnet-028e33611bea11044"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01f88c754f693b147",
            "route_table_id": "rtb-0119cf8c841f306be",
            "subnet_id": "subnet-088337642e12cb411"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pub_rt",
            "aws_subnet.public_subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "SGs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:security-group/sg-0105862068cf4c9ff",
            "description": "SG1",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0105862068cf4c9ff",
            "ingress": [],
            "name": "SG1",
            "name_prefix": "",
            "owner_id": "122190129446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG1"
            },
            "tags_all": {
              "Name": "SG1"
            },
            "timeouts": null,
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:security-group/sg-083cbc1a1452bbfe6",
            "description": "SG2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083cbc1a1452bbfe6",
            "ingress": [],
            "name": "SG2",
            "name_prefix": "",
            "owner_id": "122190129446",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SG2"
            },
            "tags_all": {
              "Name": "SG2"
            },
            "timeouts": null,
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:subnet/subnet-01e56d0d3e5011dbb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-01e56d0d3e5011dbb",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122190129446",
            "tags": {
              "Name": "prv-sub-01"
            },
            "tags_all": {
              "Name": "prv-sub-01"
            },
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:subnet/subnet-0b43d709041937d86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0b43d709041937d86",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122190129446",
            "tags": {
              "Name": "prv-sub-02"
            },
            "tags_all": {
              "Name": "prv-sub-02"
            },
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:subnet/subnet-042576f829250640a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-042576f829250640a",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122190129446",
            "tags": {
              "Name": "prv-sub-03"
            },
            "tags_all": {
              "Name": "prv-sub-03"
            },
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:subnet/subnet-029289ee98e51c914",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-029289ee98e51c914",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122190129446",
            "tags": {
              "Name": "pub-sub-01"
            },
            "tags_all": {
              "Name": "pub-sub-01"
            },
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:subnet/subnet-0647f7b7e08287b0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0647f7b7e08287b0c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122190129446",
            "tags": {
              "Name": "pub-sub-02"
            },
            "tags_all": {
              "Name": "pub-sub-02"
            },
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:subnet/subnet-028e33611bea11044",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1f",
            "availability_zone_id": "use1-az5",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-028e33611bea11044",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122190129446",
            "tags": {
              "Name": "pub-sub-03"
            },
            "tags_all": {
              "Name": "pub-sub-03"
            },
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:subnet/subnet-088337642e12cb411",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.8.0/24",
            "id": "subnet-088337642e12cb411",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122190129446",
            "tags": {
              "Name": "pub-sub-04"
            },
            "tags_all": {
              "Name": "pub-sub-04"
            },
            "vpc_id": "vpc-01180d9ef8355397e"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:122190129446:vpc/vpc-01180d9ef8355397e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0887792f992dacd6a",
            "default_route_table_id": "rtb-01d01d4c179444ceb",
            "default_security_group_id": "sg-0e9133be5410cf0ab",
            "dhcp_options_id": "dopt-dcfacea7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-01180d9ef8355397e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d01d4c179444ceb",
            "owner_id": "122190129446",
            "tags": {
              "Name": "test-Prod-VPC-01"
            },
            "tags_all": {
              "Name": "test-Prod-VPC-01"
            }
          }
        }
      ]
    }
  ]
}